--- a/TO/src/TO_Attendance_Update.form
+++ b/TO/src/TO_Attendance_Update.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="TO_Attendance_ADD">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="TO_Attendance_Update">
   <grid id="27dc6" binding="panel1" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="5fdc9" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="9e916" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -16,7 +16,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="b4bbc" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="d5aa5" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="10" left="10" bottom="10" right="10"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -26,7 +26,7 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="3c6d2" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
+              <component id="75ef0" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
                 <constraints>
                   <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -37,7 +37,7 @@
                   <text value="Logout"/>
                 </properties>
               </component>
-              <component id="68f0d" class="javax.swing.JButton" binding="attendenceButton" default-binding="true">
+              <component id="5d4f2" class="javax.swing.JButton" binding="attendenceButton" default-binding="true">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -48,7 +48,7 @@
                   <text value="Attendence"/>
                 </properties>
               </component>
-              <component id="c6a4d" class="javax.swing.JButton" binding="timetableButton" default-binding="true">
+              <component id="44f07" class="javax.swing.JButton" binding="timetableButton" default-binding="true">
                 <constraints>
                   <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -59,7 +59,7 @@
                   <text value="Timetable"/>
                 </properties>
               </component>
-              <component id="43c74" class="javax.swing.JButton" binding="noticeButton" default-binding="true">
+              <component id="903b9" class="javax.swing.JButton" binding="noticeButton" default-binding="true">
                 <constraints>
                   <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -70,7 +70,7 @@
                   <text value="Notice"/>
                 </properties>
               </component>
-              <component id="d214b" class="javax.swing.JButton" binding="medicalButton" default-binding="true">
+              <component id="83c3b" class="javax.swing.JButton" binding="medicalButton" default-binding="true">
                 <constraints>
                   <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -81,7 +81,7 @@
                   <text value="Medical"/>
                 </properties>
               </component>
-              <component id="cacba" class="javax.swing.JLabel">
+              <component id="e8a4d" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -90,7 +90,7 @@
                   <text value=""/>
                 </properties>
               </component>
-              <component id="84a4d" class="javax.swing.JLabel">
+              <component id="131cd" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -99,7 +99,7 @@
                   <text value=""/>
                 </properties>
               </component>
-              <component id="58192" class="javax.swing.JLabel">
+              <component id="71199" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -108,7 +108,7 @@
                   <text value=""/>
                 </properties>
               </component>
-              <component id="14506" class="javax.swing.JLabel">
+              <component id="73989" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -117,7 +117,7 @@
                   <text value=""/>
                 </properties>
               </component>
-              <component id="bf55d" class="javax.swing.JLabel">
+              <component id="e399" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -126,7 +126,7 @@
                   <text value=""/>
                 </properties>
               </component>
-              <component id="1adbb" class="javax.swing.JLabel">
+              <component id="e8c44" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -138,7 +138,7 @@
               </component>
             </children>
           </grid>
-          <grid id="5099e" layout-manager="GridLayoutManager" row-count="8" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="42cab" layout-manager="GridLayoutManager" row-count="8" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -146,7 +146,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="3aae0" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+              <component id="88944" class="javax.swing.JTextField" binding="textField1" default-binding="true">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -154,7 +154,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="ebde1" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+              <component id="16de5" class="javax.swing.JTextField" binding="textField2" default-binding="true">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -162,7 +162,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="79675" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+              <component id="e977f" class="javax.swing.JTextField" binding="textField3" default-binding="true">
                 <constraints>
                   <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -170,7 +170,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="a0949" class="javax.swing.JTextField" binding="textField4" default-binding="true">
+              <component id="8c2ab" class="javax.swing.JTextField" binding="textField4" default-binding="true">
                 <constraints>
                   <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -178,31 +178,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="65638" class="javax.swing.JTextField" binding="textField5" default-binding="true">
-                <constraints>
-                  <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
-                </constraints>
-                <properties/>
-              </component>
-              <component id="6a50d" class="javax.swing.JTextField" binding="textField6" default-binding="true">
-                <constraints>
-                  <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
-                </constraints>
-                <properties/>
-              </component>
-              <component id="3e789" class="javax.swing.JTextField" binding="textField7" default-binding="true">
-                <constraints>
-                  <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
-                </constraints>
-                <properties/>
-              </component>
-              <component id="6759a" class="javax.swing.JLabel" binding="Course_code">
+              <component id="11fa5" class="javax.swing.JLabel" binding="Course_code">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -210,7 +186,7 @@
                   <text value="Course Code"/>
                 </properties>
               </component>
-              <component id="671aa" class="javax.swing.JLabel" binding="StudentID">
+              <component id="c9187" class="javax.swing.JLabel" binding="StudentID">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -218,7 +194,7 @@
                   <text value="Student Id"/>
                 </properties>
               </component>
-              <component id="f86cf" class="javax.swing.JLabel" binding="Session_Type">
+              <component id="cac89" class="javax.swing.JLabel" binding="Session_Type">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -226,7 +202,7 @@
                   <text value="Session Type"/>
                 </properties>
               </component>
-              <component id="25a4c" class="javax.swing.JLabel" binding="Session_Date">
+              <component id="81bb0" class="javax.swing.JLabel" binding="Session_Date">
                 <constraints>
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -234,37 +210,51 @@
                   <text value="Session Date"/>
                 </properties>
               </component>
-              <component id="deb31" class="javax.swing.JLabel" binding="Status">
+              <component id="f04b8" class="javax.swing.JButton" binding="viewButton">
                 <constraints>
-                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-13922170"/>
+                  <font name="Arial Black" size="14" style="1"/>
+                  <foreground color="-131073"/>
+                  <text value="View"/>
+                </properties>
+              </component>
+              <component id="cf627" class="javax.swing.JButton" binding="updateButton">
+                <constraints>
+                  <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-13922170"/>
+                  <font name="Arial Black" size="14" style="1"/>
+                  <foreground color="-131073"/>
+                  <text value="Update"/>
+                </properties>
+              </component>
+              <component id="b32b0" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
+                <constraints>
+                  <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="50" height="50"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="6ff28" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Status"/>
                 </properties>
               </component>
-              <component id="4ebad" class="javax.swing.JLabel" binding="To_ID">
+              <component id="101f3" class="javax.swing.JTextField" binding="textField5" default-binding="true">
                 <constraints>
-                  <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
                 </constraints>
-                <properties>
-                  <text value="TO ID"/>
-                </properties>
-              </component>
-              <component id="f7052" class="javax.swing.JLabel" binding="Medical_Id">
-                <constraints>
-                  <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Medical ID"/>
-                </properties>
-              </component>
-              <component id="862d9" class="javax.swing.JButton" binding="addButton" default-binding="true">
-                <constraints>
-                  <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Add"/>
-                </properties>
+                <properties/>
               </component>
             </children>
           </grid>
