--- a/TO/src/TO_Attendance_Delete.form
+++ b/TO/src/TO_Attendance_Delete.form
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="TO_medical_Update">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="TO_Attendance_Delete">
   <grid id="27dc6" binding="panal1" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="436"/>
+      <xy x="20" y="20" width="500" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="9ed07" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="83068" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -16,7 +16,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="b92a3" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="2dd8c" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="10" left="10" bottom="10" right="10"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -26,7 +26,7 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="bea17" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
+              <component id="5277a" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
                 <constraints>
                   <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -37,7 +37,7 @@
                   <text value="Logout"/>
                 </properties>
               </component>
-              <component id="27108" class="javax.swing.JButton" binding="attendenceButton" default-binding="true">
+              <component id="683a8" class="javax.swing.JButton" binding="attendenceButton" default-binding="true">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -48,7 +48,7 @@
                   <text value="Attendence"/>
                 </properties>
               </component>
-              <component id="c3c5f" class="javax.swing.JButton" binding="timetableButton" default-binding="true">
+              <component id="73256" class="javax.swing.JButton" binding="timetableButton" default-binding="true">
                 <constraints>
                   <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -59,7 +59,7 @@
                   <text value="Timetable"/>
                 </properties>
               </component>
-              <component id="47bca" class="javax.swing.JButton" binding="noticeButton" default-binding="true">
+              <component id="1b802" class="javax.swing.JButton" binding="noticeButton" default-binding="true">
                 <constraints>
                   <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -70,7 +70,7 @@
                   <text value="Notice"/>
                 </properties>
               </component>
-              <component id="ade4c" class="javax.swing.JButton" binding="medicalButton" default-binding="true">
+              <component id="f8557" class="javax.swing.JButton" binding="medicalButton" default-binding="true">
                 <constraints>
                   <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -81,7 +81,7 @@
                   <text value="Medical"/>
                 </properties>
               </component>
-              <component id="64642" class="javax.swing.JLabel">
+              <component id="b6486" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -90,7 +90,7 @@
                   <text value=""/>
                 </properties>
               </component>
-              <component id="cdeec" class="javax.swing.JLabel">
+              <component id="311d" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -99,7 +99,7 @@
                   <text value=""/>
                 </properties>
               </component>
-              <component id="adb37" class="javax.swing.JLabel">
+              <component id="85a5a" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -108,7 +108,7 @@
                   <text value=""/>
                 </properties>
               </component>
-              <component id="8e1a8" class="javax.swing.JLabel">
+              <component id="e6ea4" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -117,7 +117,7 @@
                   <text value=""/>
                 </properties>
               </component>
-              <component id="eb2ad" class="javax.swing.JLabel">
+              <component id="7fc8c" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -126,7 +126,7 @@
                   <text value=""/>
                 </properties>
               </component>
-              <component id="8dbd1" class="javax.swing.JLabel">
+              <component id="56130" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -138,7 +138,7 @@
               </component>
             </children>
           </grid>
-          <grid id="c2ab" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="8cee4" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -146,7 +146,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="c778d" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+              <component id="889d1" class="javax.swing.JTextField" binding="textField1" default-binding="true">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -154,7 +154,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="df843" class="javax.swing.JTextField" binding="textField2">
+              <component id="22bb1" class="javax.swing.JTextField" binding="textField2" default-binding="true">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -162,23 +162,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="8cc9" class="javax.swing.JLabel" binding="Medical_id">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Medical ID"/>
-                </properties>
-              </component>
-              <component id="97e" class="javax.swing.JLabel" binding="Student_ID">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Student ID"/>
-                </properties>
-              </component>
-              <component id="9c503" class="javax.swing.JTextField" binding="textField3">
+              <component id="a765c" class="javax.swing.JTextField" binding="textField3" default-binding="true">
                 <constraints>
                   <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -186,25 +170,49 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="2b963" class="javax.swing.JLabel" binding="Course_code">
+              <component id="ad825" class="javax.swing.JTextField" binding="textField4" default-binding="true">
                 <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="5c23c" class="javax.swing.JLabel" binding="Course_code">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Course Code"/>
                 </properties>
               </component>
-              <component id="428b8" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
+              <component id="aabd8" class="javax.swing.JLabel" binding="StudentID">
                 <constraints>
-                  <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="50"/>
-                  </grid>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties/>
+                <properties>
+                  <text value="Student Id"/>
+                </properties>
               </component>
-              <component id="85c28" class="javax.swing.JButton" binding="viewButton">
+              <component id="1edfd" class="javax.swing.JLabel" binding="Session_Type">
                 <constraints>
-                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Session Type"/>
+                </properties>
+              </component>
+              <component id="84948" class="javax.swing.JLabel" binding="Session_Date">
+                <constraints>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Session Date"/>
+                </properties>
+              </component>
+              <component id="ec76c" class="javax.swing.JButton" binding="viewButton">
+                <constraints>
+                  <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <background color="-13922170"/>
@@ -213,7 +221,7 @@
                   <text value="View"/>
                 </properties>
               </component>
-              <component id="e9a2f" class="javax.swing.JButton" binding="updateButton">
+              <component id="37ebf" class="javax.swing.JButton" binding="deleteButton">
                 <constraints>
                   <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -221,24 +229,16 @@
                   <background color="-13922170"/>
                   <font name="Arial Black" size="14" style="1"/>
                   <foreground color="-131073"/>
-                  <text value="Update"/>
+                  <text value="Delete"/>
                 </properties>
               </component>
-              <component id="ed1c8" class="javax.swing.JTextField" binding="textField4">
+              <component id="63b49" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
                 <constraints>
-                  <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
+                  <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="50" height="50"/>
                   </grid>
                 </constraints>
                 <properties/>
-              </component>
-              <component id="cc236" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Status"/>
-                </properties>
               </component>
             </children>
           </grid>
